tweak: Minor QOL improvements to ModGrid sorting (#52)
tweak: Added more filtering options to character overview

chore: Added some simplified Chinese translations to Startup page and Settings page. This is mostly a proof of concept and was translated trough chatGPT. Language can be changed on the settings page.

refactor: Major refactoring of code related to Character Overview sorting and filtering.

--- a/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
+++ b/src/GIMI-ModManager.WinUI/Views/CharactersPage.xaml
@@ -11,6 +11,7 @@
     xmlns:local="using:GIMI_ModManager.WinUI.Views"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
     xmlns:models="using:GIMI_ModManager.WinUI.Models"
+    xmlns:subVms="using:GIMI_ModManager.WinUI.ViewModels.SubVms"
     mc:Ignorable="d">
 
     <Page.Resources>
@@ -36,17 +37,6 @@
                         <FontIcon Glyph="{x:Bind ViewModel.PinGlyph, Mode=OneWay}" />
                     </MenuFlyoutItem.Icon>
                 </MenuFlyoutItem>
-                <!--<MenuFlyoutSeparator />
-                <MenuFlyoutSeparator />
-                <MenuFlyoutSeparator />
-                <MenuFlyoutItem
-                    Command="{x:Bind ViewModel.HideCharacterCommand}"
-                    CommandParameter="{Binding}"
-                    Text="Hide Character">
-                    <MenuFlyoutItem.Icon>
-                        <FontIcon Glyph="&#xED1A;" />
-                    </MenuFlyoutItem.Icon>
-                </MenuFlyoutItem>-->
             </MenuFlyout>
         </Grid.Resources>
 
@@ -56,46 +46,10 @@
             <RowDefinition Height="*" />
         </Grid.RowDefinitions>
 
-        <StackPanel
-            Grid.Column="0"
-            HorizontalAlignment="Right"
-            Orientation="Horizontal">
-            <Button
-                Command="{x:Bind ViewModel.RefreshModsInGameCommand}"
-                Content="Refresh Mods"
-                IsHitTestVisible="True" />
-            <Button
-                Margin="32,0,32,0"
-                Command="{x:Bind ViewModel.Start3DmigotoCommand}"
-                Content="Start 3Dmigoto">
-                <ToolTipService.ToolTip>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{x:Bind ViewModel.ThreeDMigtoProcessManager.ProcessPath, Mode=OneWay}" TextWrapping="WrapWholeWords" />
-                    </StackPanel>
-                </ToolTipService.ToolTip>
-            </Button>
-            <Button Command="{x:Bind ViewModel.StartGenshinCommand}">
-                <StackPanel Orientation="Horizontal">
-                    <TextBlock Margin="0,0,4,0" Text="Start Genshin" />
-                    <Image
-                        Width="16"
-                        Height="16"
-                        Source="../Assets/Images/Start_Genshin.png" />
-                </StackPanel>
-                <ToolTipService.ToolTip>
-                    <StackPanel Orientation="Horizontal">
-                        <TextBlock Text="{x:Bind ViewModel.GenshinProcessManager.ProcessPath, Mode=OneWay}" TextWrapping="WrapWholeWords" />
-                    </StackPanel>
-                </ToolTipService.ToolTip>
-            </Button>
-        </StackPanel>
-
-        <Grid Grid.Row="1">
-
+        <Grid>
             <Grid.ColumnDefinitions>
                 <ColumnDefinition Width="Auto" />
                 <ColumnDefinition Width="*" />
-                <ColumnDefinition Width="Auto" />
             </Grid.ColumnDefinitions>
 
             <StackPanel
@@ -120,6 +74,124 @@
 
 
             </StackPanel>
+
+            <StackPanel
+                Grid.Column="1"
+                HorizontalAlignment="Right"
+                Orientation="Horizontal">
+
+                <TextBlock
+                    Margin="0,0,8,0"
+                    VerticalAlignment="Center"
+                    Text="Sort by:"
+                    TextWrapping="WrapWholeWords" />
+
+                <ComboBox
+                    x:Name="SortingComboBox"
+                    Margin="0,0,8,0"
+                    VerticalAlignment="Center"
+                    ItemsSource="{x:Bind ViewModel.SortingMethods, Mode=OneWay}"
+                    PlaceholderText="Sort Characters..."
+                    SelectedItem="{x:Bind ViewModel.SelectedSortingMethod, Mode=TwoWay}"
+                    SelectionChanged="SortingComboBox_OnSelectionChanged" />
+
+                <ToggleButton
+                    Margin="0,0,16,0"
+                    Command="{x:Bind ViewModel.InvertSortingCommand}"
+                    IsChecked="{x:Bind ViewModel.SortByDescending, Mode=TwoWay}">
+                    <ToggleButton.Content>
+                        <FontIcon Glyph="&#xE8CB;" />
+                    </ToggleButton.Content>
+                </ToggleButton>
+
+                <Button
+                    Command="{x:Bind ViewModel.RefreshModsInGameCommand}"
+                    Content="Refresh Mods"
+                    IsHitTestVisible="True" />
+                <Button
+                    Margin="32,0,32,0"
+                    Command="{x:Bind ViewModel.Start3DmigotoCommand}"
+                    Content="Start 3Dmigoto">
+                    <ToolTipService.ToolTip>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{x:Bind ViewModel.ThreeDMigtoProcessManager.ProcessPath, Mode=OneWay}" TextWrapping="WrapWholeWords" />
+                        </StackPanel>
+                    </ToolTipService.ToolTip>
+                </Button>
+                <Button Command="{x:Bind ViewModel.StartGenshinCommand}">
+                    <StackPanel Orientation="Horizontal">
+                        <TextBlock Margin="0,0,4,0" Text="Start Genshin" />
+                        <Image
+                            Width="16"
+                            Height="16"
+                            Source="../Assets/Images/Start_Genshin.png" />
+                    </StackPanel>
+                    <ToolTipService.ToolTip>
+                        <StackPanel Orientation="Horizontal">
+                            <TextBlock Text="{x:Bind ViewModel.GenshinProcessManager.ProcessPath, Mode=OneWay}" TextWrapping="WrapWholeWords" />
+                        </StackPanel>
+                    </ToolTipService.ToolTip>
+                </Button>
+            </StackPanel>
+        </Grid>
+
+        <Grid Grid.Row="1">
+
+            <Grid.ColumnDefinitions>
+                <ColumnDefinition Width="Auto" />
+                <ColumnDefinition Width="*" />
+                <ColumnDefinition Width="Auto" />
+            </Grid.ColumnDefinitions>
+
+
+            <!--<StackPanel
+                x:Name="ElementFilter"
+                Padding="4"
+                VerticalAlignment="Bottom"
+                Background="{ThemeResource CardBackgroundFillColorDefaultBrush}"
+                CornerRadius="10"
+                Orientation="Horizontal">-->
+
+            <ScrollViewer HorizontalScrollBarVisibility="Auto">
+
+                <GridView
+                    Padding="0,0,0,4"
+                    Background="{ThemeResource LayerOnMicaBaseAltFillColorDefaultBrush}"
+                    IsItemClickEnabled="True"
+                    IsMultiSelectCheckBoxEnabled="False"
+                    ItemsSource="{x:Bind ViewModel.DockPanelVM.Elements, Mode=TwoWay}"
+                    SelectionChanged="Selector_OnSelectionChanged"
+                    SelectionMode="Multiple">
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="subVms:ElementIcon">
+                            <ItemContainer
+                                Width="60"
+                                MaxWidth="80"
+                                MaxHeight="40"
+                                IsSelected="{x:Bind IsSelected, Mode=TwoWay}">
+                                <Grid Padding="4,0" HorizontalAlignment="Center">
+                                    <Image
+                                        VerticalAlignment="Center"
+                                        ImageFailed="BitmapImage_OnImageFailed"
+                                        Source="{x:Bind ImageUri}" />
+                                </Grid>
+                            </ItemContainer>
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                    <!--<GridView.Layout>
+                    <StackLayout Orientation="Horizontal" />
+                </GridView.Layout>-->
+                </GridView>
+            </ScrollViewer>
+
+            <!--<Button>
+                    <Button.Content>
+                        <FontIcon Glyph="&#xE894;" />
+                    </Button.Content>
+                </Button>
+
+            </StackPanel>-->
+
 
             <Grid
                 x:Name="DragAndDropArea"
@@ -182,6 +254,7 @@
 
         <controls:AdaptiveGridView
             Grid.Row="2"
+            Margin="0,0,0,8"
             animations:Connected.ListItemElementName="itemThumbnail"
             animations:Connected.ListItemKey="animationKeyContentGrid"
             animations:ItemsReorderAnimation.Duration="00:00:00.4460000"
@@ -269,5 +342,46 @@
                 </DataTemplate>
             </controls:AdaptiveGridView.ItemTemplate>
         </controls:AdaptiveGridView>
+        <!--<controls:DockPanel Grid.Row="2" HorizontalAlignment="Center">
+            <StackPanel
+                x:Name="ElementFilter"
+                Padding="4"
+                HorizontalAlignment="Center"
+                VerticalAlignment="Bottom"
+                controls:DockPanel.Dock="Bottom"
+                Background="{ThemeResource SmokeFillColorDefaultBrush}"
+                CornerRadius="10"
+                Orientation="Horizontal">
+                <GridView
+                    VerticalAlignment="Bottom"
+                    BorderThickness="0"
+                    IsItemClickEnabled="True"
+                    IsMultiSelectCheckBoxEnabled="False"
+                    ItemClick="ListViewBase_OnItemClick"
+                    ItemsSource="{x:Bind ViewModel.DockPanelVM.Elements, Mode=OneWay}"
+                    SelectedItem="{x:Bind ViewModel.DockPanelVM.SelectedElement, Mode=TwoWay}"
+                    SelectionMode="Single">
+
+                    <GridView.ItemTemplate>
+                        <DataTemplate x:DataType="subVms:ElementIcon">
+                            <Grid
+                                Margin="8,0,8,0"
+                                HorizontalAlignment="Center"
+                                VerticalAlignment="Center">
+                                <Image MaxWidth="40" Source="{x:Bind ImageUri}" />
+                            </Grid>
+
+                        </DataTemplate>
+                    </GridView.ItemTemplate>
+                </GridView>
+
+                <Button>
+                    <Button.Content>
+                        <FontIcon Glyph="&#xE894;" />
+                    </Button.Content>
+                </Button>
+
+            </StackPanel>
+        </controls:DockPanel>-->
     </Grid>
 </Page>
