--- a/src/JASM.AutoUpdater/MainPage.xaml
+++ b/src/JASM.AutoUpdater/MainPage.xaml
@@ -12,18 +12,39 @@
 
     <Page.Resources>
         <helpers:BoolToVisibleConverter x:Key="BoolToVisibilityConverter" />
-
     </Page.Resources>
 
-    <Grid Margin="32" HorizontalAlignment="Center">
+    <Grid Margin="32">
+        <Grid.RowDefinitions>
+            <RowDefinition Height="*" />
+        </Grid.RowDefinitions>
 
 
 
 
         <StackPanel VerticalAlignment="Center" Visibility="{x:Bind ViewModel.InStartupView, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
-
-            <TextBlock Text="The Auto updater will delete JASM program files and then download the latest version from GitHub." />
-            <TextBlock Text="The updater will then run the new version of JASM" />
+            <TextBlock
+                Margin="16"
+                HorizontalAlignment="Left"
+                VerticalAlignment="Top"
+                Style="{ThemeResource TitleTextBlockStyle}"
+                Text="JASM Auto Updater" />
+            <TextBlock
+                VerticalAlignment="Center"
+                IsTextSelectionEnabled="True"
+                Text="The Auto updater will delete JASM program files and then download the latest version from GitHub."
+                TextWrapping="WrapWholeWords" />
+            <TextBlock
+                VerticalAlignment="Center"
+                IsTextSelectionEnabled="True"
+                Text="This means that all files in the JASM folder will be deleted. JASM stores all personal settings in AppSettings or in the mods themselves."
+                TextWrapping="WrapWholeWords" />
+            <TextBlock
+                Margin="0,8"
+                IsTextSelectionEnabled="True"
+                Style="{ThemeResource BodyStrongTextBlockStyle}"
+                Text="If you have your mods folder or other personal files in the same folder as JASM, move them out or they will be deleted."
+                TextWrapping="WrapWholeWords" />
             <Button
                 Margin="0,16,0,0"
                 HorizontalAlignment="Center"
@@ -33,11 +54,12 @@
 
 
 
-        <Grid VerticalAlignment="Center" Visibility="{x:Bind ViewModel.UpdateProcessStarted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
+        <Grid VerticalAlignment="Top" Visibility="{x:Bind ViewModel.UpdateProcessStarted, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}">
             <Grid.RowDefinitions>
                 <RowDefinition Height="Auto" />
-                <RowDefinition Height="*" />
-                <RowDefinition Height="*" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
+                <RowDefinition Height="Auto" />
                 <RowDefinition Height="*" />
             </Grid.RowDefinitions>
 
@@ -48,15 +70,24 @@
                     <ColumnDefinition Width="*" />
                 </Grid.ColumnDefinitions>
 
-                <TextBlock
-                    Margin="16"
-                    HorizontalAlignment="Left"
-                    Style="{ThemeResource TitleTextBlockStyle}"
-                    Text="Updating to Version 1.1.1" />
+                <StackPanel Orientation="Horizontal">
+                    <TextBlock
+                        Margin="0,16,8,16"
+                        HorizontalAlignment="Left"
+                        Style="{ThemeResource TitleTextBlockStyle}"
+                        Text="Updating to Version" />
+
+                    <TextBlock
+                        Margin="0,16,0,16"
+                        HorizontalAlignment="Left"
+                        Style="{ThemeResource TitleTextBlockStyle}"
+                        Text="{x:Bind ViewModel.LatestVersion, Mode=OneWay}" />
+                </StackPanel>
 
                 <ProgressRing
                     Grid.Column="1"
                     HorizontalAlignment="Right"
+                    IsActive="{x:Bind ViewModel.IsLoading, Mode=OneWay}"
                     IsIndeterminate="True" />
             </Grid>
 
@@ -75,7 +106,7 @@
                     IsHitTestVisible="False"
                     IsSelected="{x:Bind ViewModel.UpdateProgress.DownloadingLatestUpdate, Mode=OneWay}" />
                 <controls:SegmentedItem
-                    Content="Unziping Download"
+                    Content="Unzipping Download"
                     IsHitTestVisible="False"
                     IsSelected="{x:Bind ViewModel.UpdateProgress.ExtractingLatestUpdate, Mode=OneWay}" />
                 <controls:SegmentedItem
@@ -89,9 +120,74 @@
                 Grid.Row="2"
                 Margin="0,16,0,0"
                 HorizontalAlignment="Right"
+                Command="{x:Bind ViewModel.StartUpdateCancelCommand}"
                 Content="Cancel" />
 
-            <ListView Grid.Row="3" />
+            <Button
+                Grid.Row="2"
+                Margin="0,16,0,0"
+                HorizontalAlignment="Left"
+                Command="{x:Bind ViewModel.StartUpdateCommand}"
+                Content="Retry" />
+
+            <Button
+                Grid.Row="2"
+                HorizontalAlignment="Center"
+                Command="{x:Bind ViewModel.StartJasmCommand}"
+                Content="Start JASM..."
+                Visibility="{x:Bind ViewModel.FinishedSuccessfully, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+
+
+            <InfoBar
+                Grid.Row="3"
+                IsClosable="False"
+                IsOpen="{x:Bind ViewModel.Stopped, Mode=OneWay}"
+                Message="{x:Bind ViewModel.StopReason, Mode=OneWay}"
+                Severity="Error"
+                Visibility="{x:Bind ViewModel.Stopped, Mode=OneWay, Converter={StaticResource BoolToVisibilityConverter}}" />
+
+            <ListView
+                Grid.Row="4"
+                Margin="0,8,0,0"
+                ItemsSource="{x:Bind ViewModel.ProgressLog, Mode=OneWay}"
+                SelectionMode="None">
+                <ListView.ItemTemplate>
+                    <DataTemplate x:DataType="local:LogEntry">
+                        <Grid
+                            Padding="2"
+                            BorderBrush="{ThemeResource ControlElevationBorderBrush}"
+                            BorderThickness="2">
+                            <Grid.RowDefinitions>
+                                <RowDefinition />
+                                <RowDefinition />
+                                <RowDefinition />
+                            </Grid.RowDefinitions>
+
+
+                            <TextBlock
+                                HorizontalAlignment="Left"
+                                IsTextSelectionEnabled="True"
+                                Text="{x:Bind Message, Mode=OneWay}"
+                                TextWrapping="WrapWholeWords" />
+
+                            <TextBlock
+                                Grid.Row="1"
+                                IsTextSelectionEnabled="True"
+                                Text="{x:Bind Footer, Mode=OneWay}"
+                                TextWrapping="WrapWholeWords" />
+
+                            <TextBlock
+                                Grid.Row="2"
+                                Margin="0,0,8,0"
+                                HorizontalAlignment="Right"
+                                IsTextSelectionEnabled="True"
+                                Text="{x:Bind TimeStamp, Mode=OneWay}" />
+
+                        </Grid>
+                    </DataTemplate>
+                </ListView.ItemTemplate>
+            </ListView>
+
 
         </Grid>
 
